# crisp

./: .gitignore  CMakeLists.txt  readme.md
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  builtins.c  builtins.h  common.h  environment.c  environment.h  evaluator.c  evaluator.h  gc_type.h  hash_table.c  hash_table.h  interpreter.c  interpreter.h  interpreter_internal.h  main.c  memory.c  memory.h  parser.c  parser.h  scanner.c  scanner.h  symbols.c  symbols.h  value.c  value.h  value_support.c  value_support.h
test/: CMakeLists.txt  environment_test.c  eval_test.c  evaluator_test.c  hash_table_test.c  parse_test.c  scanner_test.c  simple_test.c  simple_test.h  value_test.c
