add_executable(scanner_test scanner_test.c)
add_executable(parse_test parse_test.c)
add_executable(value_test value_test.c)
add_executable(hash_table_test hash_table_test.c)
add_executable(environment_test environment_test.c)

target_link_libraries(scanner_test PRIVATE project_options crisp_lib)
target_link_libraries(parse_test PRIVATE project_options crisp_lib)
target_link_libraries(value_test PRIVATE project_options crisp_lib)
target_link_libraries(hash_table_test PRIVATE project_options crisp_lib)
target_link_libraries(environment_test PRIVATE project_options crisp_lib)

add_test(scanner_test scanner_test)
add_test(parse_test parse_test)
add_test(value_test value_test)
add_test(hash_table_test hash_table_test)
add_test(environment_test environment_test)